--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Main2Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +22,8 @@
         </activity>
         <activity android:name=".LocalVideoActivity" />
         <activity android:name=".PlayerActivity" />
-        <activity android:name=".NetVideoActivity"></activity>
+        <activity android:name=".NetVideoActivity" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
