横竖屏切换控制显示样式

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".LocalVideoActivity" />
-        <activity android:name=".PlayerActivity" />
+        <activity android:name=".PlayerActivity"
+            android:configChanges="orientation|keyboard|keyboardHidden|screenLayout|screenSize"
+            
+            />
         <activity android:name=".NetVideoActivity" />
         <activity android:name=".Main2Activity"></activity>
     </application>
