1.优化了切换横屏时达到沉浸式一体栏的效果2.优化了lightbar的隐藏显示3.优化了横竖屏切换时的亮度控制

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".LocalVideoActivity" />
         <activity
             android:name=".PlayerActivity"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboard|keyboardHidden|screenLayout|screenSize" />
         <activity android:name=".NetVideoActivity" />
         <activity android:name=".Main2Activity" />
