--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.guaju.vitamiodemo">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
     <application
+        android:name=".VideoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,25 +18,37 @@
         <activity android:name=".MainActivity">
 
         </activity>
-        <activity android:name=".LocalVideoActivity"
-            android:screenOrientation="portrait"
-            />
+        <activity
+            android:name=".LocalVideoActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PlayerActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboard|keyboardHidden|screenLayout|screenSize" />
-        <activity android:name=".NetVideoActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Main2Activity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".GuideActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".SplashActivity"
+            android:configChanges="orientation|keyboard|keyboardHidden|screenLayout|screenSize"
+            android:screenOrientation="portrait">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.VIEW"></action>-->
+                <!--<category android:name="android.intent.category.DEFAULT"></category>-->
+                <!--<data android:mimeType="video/mpeg"></data>-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity
+            android:name=".NetVideoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Main2Activity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".GuideActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
         </activity>
     </application>
 
